objects/tfn_Bowerbird_Links__c.object
<CustomObject>
    <fields>
        <fullName>Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipLabel>Bowerbird Links</relationshipLabel>
        <relationshipName>Bowerbird_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_BBL_Number__c</fullName>
        <displayFormat>BBL{0000}</displayFormat>
        <label>BBL Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>tfn_Comments__c</fullName>
        <inlineHelpText>Mostly for Photo points</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Document_Image_Date__c</fullName>
        <label>Document/Image Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Document_Type__c</fullName>
        <label>Document Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covenant map</fullName>
                </value>
                <value>
                    <fullName>MP Cover</fullName>
                </value>
                <value>
                    <fullName>Photo point</fullName>
                </value>
                <value>
                    <fullName>Photo Points Map</fullName>
                </value>
                <value>
                    <fullName>Survey plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Document_URL_BB_Link__c</fullName>
        <inlineHelpText>Copy link from Bowerbird and Paste here</inlineHelpText>
        <label>Document URL (BB Link)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tfn_GPS_Coordinates__c</fullName>
        <label>GPS Coordinates</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>tfn_Photo_Direction_If_applies__c</fullName>
        <label>Photo Direction (If applies)</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Upload_to_MP_Document__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Upload to MP Document?</label>
        <type>Checkbox</type>
    </fields>
    <label>Bowerbird Link</label>
    <nameField>
        <label>Bowerbird Links Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bowerbird Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>